kubernetes/ingress/cert-manager-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cert-manager-webhook
  namespace: cert-manager
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-ovh
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  rules:
    - host: cert-manager.ebruno.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cert-manager-webhook
                port:
                  number: 443
  tls:
    - hosts:
        - cert-manager.ebruno.fr
      secretName: cert-manager-tls
